Remi_Hasan/src/test/resources/qls/ValidStylesheets/SimpleForm.qls
stylesheet simpleForm
{
  page Numbers
  {
    section "Integer"
    {
      question someInteger
        widget spinbox
    }
    section "Decimal"
    {
      question someDecimal
        widget slider(0.0,1.0,0.1)
      question someMoney
      default money widget textbox
    }
  }

  page Others
  {
    section "String, date and boolean"
    {
      question someString
      section "Date"
      {
        question someDate
      }
      section "Boolean"
      {
        question someBoolean
      }
    }
    default boolean {
     width: 400
     widget radio("Yes", "No")
    }
    default integer {
     width: 400
    }
  }
}