Remi_Hasan/src/test/resources/qls/InvalidStylesheets/SimpleFormDefaultStringSlider.qls
stylesheet simpleForm
{
  page Page1
  {
    section "All Questions"
    {
      question someInteger
      question someBoolean
      question someDecimal
      question someDate
      question someMoney
      question someString
    }
    default string widget slider(0,1)
  }
}